# todo-app

./: CLAUDE.md  README.md
phase-1/: .gitignore  IMPLEMENTATION_SUMMARY.md  PHASE1_STRUCTURE.md  QUICKSTART.md  README.md  pyproject.toml
phase-1/specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-1/specs/001-todo-console-app/checklists/: requirements.md
phase-1/specs/001-todo-console-app/contracts/: cli.md  models.md  services.md  validators.md
phase-1/src/: __init__.py  main.py
phase-1/src/cli/: __init__.py  add_operations.py  delete_operations.py  menu.py  toggle_operations.py  update_operations.py  view_operations.py
phase-1/src/models/: __init__.py  task.py
phase-1/src/services/: __init__.py  task_manager.py
phase-1/src/validators/: __init__.py  input_validators.py
phase-1/tests/: run_all_tests.py  test_add_operations.py  test_delete_operations.py  test_integration.py  test_smoke.py  test_toggle_operations.py  test_update_operations.py  test_validators.py  test_view_operations.py
phase-2/backend/: .env.example  .gitignore  CLAUDE.md  README_HF.md  db.py  init_db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
phase-2/backend/auth/: __init__.py  middleware.py
phase-2/backend/routes/: __init__.py  auth.py
phase-3/: README.md
phase-4/: CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.yml
phase-5/: CLAUDE.md  README.md  cleanup-azure.sh  docker-compose.yml
skills/: api-architect.skill.md  code-reviewer.skill.md  debug-doctor.skill.md  hackathon-quickstart.skill.md
(+299 files in other folders)
