[project]
name = "todo-console-app"
version = "1.0.0"
description = "Phase I in-memory CLI todo application for Evolution of Todo Hackathon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.urls]
Repository = "https://github.com/your-org/hackathon-2"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []
